# wl_ugps_external_extension

./: .gitignore  Dockerfile  README.md  custom_args.json  pyproject.toml  requirements.txt  test_args.json
app/: data_logger.py  listen_thread.py  main.py  nmea_sentences.py  polling_thread.py  send_thread.py  setup.py  topside_position.py  ugps_connection.py  util.py
app/static/: index.html  register_service
app/static/css/: index.css
app/static/js/: index.js
